--- a/flavors/optimaaldigitaal/scss/components/_page-home.scss
+++ b/flavors/optimaaldigitaal/scss/components/_page-home.scss
@@ -84,7 +84,7 @@
     }
 
     @include bp-up(xlg){
-      padding-top: 14rem;
+      padding-top: 12rem;
       background-position: center top -25rem;
 
       &:before {
