--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,7 +3,6 @@ html {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
   font-size: 62.5%;
 }
 
