--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -87,6 +87,10 @@
   }
 }
 
+// Types
+
+
+
 .section--related {
   &.l-item-count-1,
   &.l-item-count-2 {
@@ -115,17 +119,6 @@
   margin-top: $gutter;
 }
 
-
-// TExts
-
-.section--text {
-  @include ho-padding;
-
-  .section__title {
-    border: none;
-    padding-top: 0;
-  }
-}
 
 // Overviews
 
@@ -187,6 +180,10 @@
 .section--actual {
   .section__title {
     border: none;
+  }
+
+  .l-section-content {
+    max-width: $max-width-container;
   }
 
   .teaser--small {
